--- a/www/app/config/security.yml
+++ b/www/app/config/security.yml
@@ -1,12 +1,34 @@
 security:
+    encoders:
+        Wanjee\Shuwee\AdminBundle\Entity\User:
+            algorithm: sha1
+            iterations: 1
+            encode_as_base64: false
+
     providers:
-        in_memory:
-            memory: ~
+        shuwee_provider:
+            entity:
+                class: ShuweeAdminBundle:User
+                property: username
 
     firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
-        default:
+        admin_area:
+            pattern:    ^/admin
             anonymous: ~
+            form_login:
+                check_path: /admin/login_check
+                login_path: /admin/login
+                default_target_path: /admin
+            logout:
+                path:   /admin/logout
+                target: /
+            provider: shuwee_provider
+
+
+    access_control:
+            - { path: ^/admin/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/admin, role: ROLE_ADMIN }
+
+    role_hierarchy:
+        ROLE_ADMIN:       [ROLE_USER]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
