--- a/www/composer.json
+++ b/www/composer.json
@@ -23,12 +23,17 @@
     "sensio/distribution-bundle": "~3.0,>=3.0.12",
     "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
     "incenteev/composer-parameter-handler": "~2.0",
-    "wanjee/shuwee-admin-bundle": "dev-master"
+    "wanjee/shuwee-admin-bundle": "dev-master",
+    "wanjee/shuwee-config-bundle": "dev-master"
   },
   "repositories": [
     {
       "type": "vcs",
       "url": "https://github.com/wanjee/ShuweeAdminBundle"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/wanjee/ShuweeConfigBundle"
     }
   ],
   "require-dev": {
