Add default redirect to admin as index will serve no purpose here (at the moment)

--- a/back/app/config/routing.yml
+++ b/back/app/config/routing.yml
@@ -7,3 +7,7 @@ shuwee_admin:
 
 shuwee_config:
     resource: "@ShuweeConfigBundle/Resources/config/routing.yml"
+
+appbundle:
+    resource: "@AppBundle/Controller/"
+    type: annotation
