--- a/back/composer.json
+++ b/back/composer.json
@@ -15,7 +15,6 @@
     "doctrine/orm": "~2.2,>=2.2.3,<2.5",
     "doctrine/dbal": "<2.5",
     "doctrine/doctrine-bundle": "~1.2",
-    "doctrine/doctrine-fixtures-bundle": "~2.2",
     "twig/extensions": "~1.0",
     "symfony/assetic-bundle": "~2.3",
     "symfony/swiftmailer-bundle": "~2.3",
@@ -23,6 +22,7 @@
     "sensio/distribution-bundle": "~3.0,>=3.0.12",
     "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
     "incenteev/composer-parameter-handler": "~2.0",
+    "stof/doctrine-extensions-bundle": "^1.2",
     "wanjee/shuwee-admin-bundle": "dev-master",
     "wanjee/shuwee-config-bundle": "dev-master"
   },
