Move static front-end files to the Symfony directory; Use Symfony to render page tpl;  Add Backbone support work in progress; Multiple fixes and minor modifications in homepage (i.e. smooth scrolling, about section, show section copy,...)

--- a/back/.gitignore
+++ b/back/.gitignore
@@ -1,6 +1,4 @@
 /web/bundles/
-/web/js/
-/web/css/
 /app/config/parameters.yml
 /var/bootstrap.php.cache
 /var/SymfonyRequirements.php
@@ -16,3 +14,7 @@
 /composer.phar
 back/web/uploads
 back/web/media
+node_modules
+.sass-cache
+dist/
+.tmp/
