--- a/www/composer.json
+++ b/www/composer.json
@@ -16,13 +16,13 @@
     "doctrine/dbal": "<2.5",
     "doctrine/doctrine-bundle": "~1.2",
     "twig/extensions": "~1.0",
-    "symfony/assetic-bundle": "~2.3",
     "symfony/swiftmailer-bundle": "~2.3",
     "symfony/monolog-bundle": "~2.4",
     "sensio/distribution-bundle": "~3.0,>=3.0.12",
     "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
     "incenteev/composer-parameter-handler": "~2.0",
     "stof/doctrine-extensions-bundle": "^1.2",
+    "erusev/parsedown": "^1.6",
     "wanjee/shuwee-admin-bundle": "dev-master",
     "wanjee/shuwee-config-bundle": "dev-master"
   },
@@ -46,17 +46,11 @@
     "post-install-cmd": [
       "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles"
     ],
     "post-update-cmd": [
       "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles"
     ]
   },
@@ -73,7 +67,7 @@
       "file": "app/config/parameters.yml"
     },
     "branch-alias": {
-      "dev-master": "2.6-dev"
+      "dev-master": "2.7-dev"
     }
   }
 }
