--- a/www/src/AppBundle/Resources/config/services.yml
+++ b/www/src/AppBundle/Resources/config/services.yml
@@ -1,6 +1,14 @@
 services:
     appbundle.post_admin:
         class: AppBundle\Admin\PostAdmin
+        arguments: [@router]
         parent: shuwee_admin.admin_abstract
         tags:
           -  { name: shuwee.admin, alias: post }
+
+    appbundle.twig.app_extension:
+        class:     AppBundle\Twig\AppExtension
+        arguments: ["@markdown"]
+        public:    false
+        tags:
+          - { name: twig.extension }
