Rename post image filter; Fix date format

--- a/www/app/config/config.yml
+++ b/www/app/config/config.yml
@@ -63,7 +63,7 @@ liip_imagine:
 
     filter_sets:
         cache: ~
-        promoted_post:
+        post_promoted:
             quality: 75
             filters:
                 thumbnail: { size: [400, 200], mode: outbound }
