Add alternate layout for a block when it has no attached image; Fix size of image when one is attached

--- a/www/app/config/config.yml
+++ b/www/app/config/config.yml
@@ -67,6 +67,11 @@ liip_imagine:
             quality: 75
             filters:
                 thumbnail: { size: [400, 200], mode: outbound }
+        block_figure:
+            quality: 75
+            filters:
+                thumbnail: { size: [670, 380], mode: outbound }
+
 
 services:
     twig.extension.text:
