--- a/www/src/AppBundle/Resources/config/services.yml
+++ b/www/src/AppBundle/Resources/config/services.yml
@@ -1,21 +1,21 @@
 services:
     appbundle.post_admin:
         class: AppBundle\Admin\PostAdmin
-        arguments: [@router]
+        arguments: ['@router']
         parent: shuwee_admin.admin_abstract
         tags:
           -  { name: shuwee.admin, alias: post }
 
     appbundle.block_admin:
         class: AppBundle\Admin\BlockAdmin
-        arguments: [@router]
+        arguments: ['@router']
         parent: shuwee_admin.admin_abstract
         tags:
           -  { name: shuwee.admin, alias: block }
 
     appbundle.twig.app_extension:
         class:     AppBundle\Twig\AppExtension
-        arguments: ["@markdown"]
+        arguments: ['@markdown']
         public:    false
         tags:
           - { name: twig.extension }
