--- a/www/composer.json
+++ b/www/composer.json
@@ -12,9 +12,9 @@
   "require": {
     "php": ">=5.3.3",
     "symfony/symfony": "~2.8.0",
-    "doctrine/orm": "~2.2,>=2.2.3,<2.5",
+    "doctrine/orm": "^2.4.8",
     "doctrine/dbal": "<2.5",
-    "doctrine/doctrine-bundle": "~1.2",
+    "doctrine/doctrine-bundle": "~1.4",
     "twig/extensions": "~1.0",
     "symfony/swiftmailer-bundle": "~2.3",
     "symfony/monolog-bundle": "~2.4",
