Upgrade wanjee.be to Symfony 3

--- a/www/app/config/routing.yml
+++ b/www/app/config/routing.yml
@@ -8,6 +8,6 @@ shuwee_admin:
 shuwee_config:
     resource: "@ShuweeConfigBundle/Resources/config/routing.yml"
 
-appbundle:
+app:
     resource: "@AppBundle/Controller/"
     type: annotation
