--- a/www/.gitignore
+++ b/www/.gitignore
@@ -1,19 +1,22 @@
+/app/config/parameters.yml
+/build/
+/phpunit.xml
+/var/*
+!/var/cache
+/var/cache/*
+!var/cache/.gitkeep
+!/var/logs
+/var/logs/*
+!var/logs/.gitkeep
+!/var/sessions
+/var/sessions/*
+!var/sessions/.gitkeep
+!var/SymfonyRequirements.php
+/vendor/
 /web/bundles/
 /web/uploads/
 /web/media/
-/app/config/parameters.yml
-/var/bootstrap.php.cache
-/var/SymfonyRequirements.php
-/var/cache/*
-/var/logs/*
-!var/cache/.gitkeep
-!var/logs/.gitkeep
-/build/
-/vendor/
-/bin/*
-!bin/console
-!bin/symfony_requirements
-/composer.phar
+
 node_modules
 .sass-cache
 dist/
