--- a/www/composer.json
+++ b/www/composer.json
@@ -1,73 +1,60 @@
 {
-  "name": "shuwee/demo",
+  "name": "symfony/framework-standard-edition",
   "license": "MIT",
   "type": "project",
-  "description": "Playground and demo for Shuwee bundles.",
+  "description": "The \"Symfony Standard Edition\" distribution",
   "autoload": {
-    "psr-0": {
-      "": "src/",
-      "SymfonyStandard": "app/"
-    }
+    "psr-4": {"": "src/"},
+    "files": ["app/AppKernel.php"]
+  },
+  "autoload-dev": {
+    "psr-4": {"Tests\\": "tests/"}
   },
   "require": {
-    "php": ">=5.3.3",
-    "symfony/symfony": "~2.8.0",
-    "doctrine/orm": "^2.4.8",
-    "doctrine/dbal": "<2.5",
-    "doctrine/doctrine-bundle": "~1.4",
+    "php": ">=5.5.9",
+    "symfony/symfony": "3.0.*",
+    "doctrine/orm": "^2.5",
+    "doctrine/doctrine-bundle": "^1.6",
+    "doctrine/doctrine-cache-bundle": "^1.2",
+    "symfony/swiftmailer-bundle": "^2.3",
+    "symfony/monolog-bundle": "^2.8",
+    "sensio/distribution-bundle": "^5.0",
+    "sensio/framework-extra-bundle": "^3.0.2",
+    "incenteev/composer-parameter-handler": "^2.0",
+    "stof/doctrine-extensions-bundle": "dev-master",
     "twig/extensions": "~1.0",
-    "symfony/swiftmailer-bundle": "~2.3",
-    "symfony/monolog-bundle": "~2.4",
-    "sensio/distribution-bundle": "~3.0,>=3.0.12",
-    "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-    "incenteev/composer-parameter-handler": "~2.0",
-    "stof/doctrine-extensions-bundle": "^1.2",
     "erusev/parsedown": "^1.6",
-    "wanjee/shuwee-admin-bundle": "dev-master",
-    "wanjee/shuwee-config-bundle": "dev-master"
+    "wanjee/shuwee-admin-bundle": "~1.0.0",
+    "wanjee/shuwee-config-bundle": "~1.0.0"
   },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/wanjee/ShuweeAdminBundle"
-    },
-    {
-      "type": "vcs",
-      "url": "https://github.com/wanjee/ShuweeConfigBundle"
-    }
-  ],
   "require-dev": {
-    "sensio/generator-bundle": "~2.3"
+    "sensio/generator-bundle": "^3.0",
+    "symfony/phpunit-bridge": "^2.7"
   },
   "scripts": {
-    "post-root-package-install": [
-      "SymfonyStandard\\Composer::hookRootPackageInstall"
-    ],
     "post-install-cmd": [
       "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles"
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
     ],
     "post-update-cmd": [
       "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles"
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
     ]
-  },
-  "config": {
-    "bin-dir": "bin"
   },
   "extra": {
     "symfony-app-dir": "app",
     "symfony-bin-dir": "bin",
     "symfony-var-dir": "var",
     "symfony-web-dir": "web",
+    "symfony-tests-dir": "tests",
     "symfony-assets-install": "relative",
     "incenteev-parameters": {
       "file": "app/config/parameters.yml"
     },
     "branch-alias": {
-      "dev-master": "2.7-dev"
+      "dev-master": "3.0-dev"
     }
   }
 }
