--- a/www/app/config/security.yml
+++ b/www/app/config/security.yml
@@ -1,9 +1,8 @@
 security:
     encoders:
         Wanjee\Shuwee\AdminBundle\Entity\User:
-            algorithm: sha1
-            iterations: 1
-            encode_as_base64: false
+            algorithm: bcrypt
+            cost: 15
 
     providers:
         shuwee_provider:
