Fix schuwen bundles versions to dev to ease development

--- a/www/composer.json
+++ b/www/composer.json
@@ -24,8 +24,8 @@
     "stof/doctrine-extensions-bundle": "dev-master",
     "twig/extensions": "~1.0",
     "erusev/parsedown": "^1.6",
-    "wanjee/shuwee-admin-bundle": "~1.0.0",
-    "wanjee/shuwee-config-bundle": "~1.0.0"
+    "wanjee/shuwee-admin-bundle": "dev-master",
+    "wanjee/shuwee-config-bundle": "@dev"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
