--- a/www/composer.json
+++ b/www/composer.json
@@ -12,7 +12,7 @@
   },
   "require": {
     "php": ">=5.5.9",
-    "symfony/symfony": "3.0.*",
+    "symfony/symfony": "3.2.*",
     "doctrine/orm": "^2.5",
     "doctrine/doctrine-bundle": "^1.6",
     "doctrine/doctrine-cache-bundle": "^1.2",
@@ -24,8 +24,7 @@
     "stof/doctrine-extensions-bundle": "dev-master",
     "twig/extensions": "~1.0",
     "erusev/parsedown": "^1.6",
-    "wanjee/shuwee-admin-bundle": "dev-master",
-    "wanjee/shuwee-config-bundle": "@dev"
+    "wanjee/shuwee-admin-bundle": "dev-master"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
