--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,11 +2,12 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host:     127.0.0.1
-    database_port:     ~
-    database_name:     symfony
-    database_user:     root
-    database_password: ~
+    # See https://help.fortrabbit.com/install-symfony-3-uni#toc-mysql
+    database_host: %database.host%
+    database_port: %database.port%
+    database_name: %database.name%
+    database_user: %database.user%
+    database_password: %database.password%
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
