Fix for Fortrabbit: add auto configuration of database credentials

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -3,11 +3,12 @@
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
     # See https://help.fortrabbit.com/install-symfony-3-uni#toc-mysql
-    database_host: %database.host%
-    database_port: %database.port%
-    database_name: %database.name%
-    database_user: %database.user%
-    database_password: %database.password%
+    database_host: %env(MYSQL_HOST)%
+    database_port: %env(MYSQL_PORT)%
+    database_name: %env(MYSQL_DATABASE)%
+    database_user: %env(MYSQL_USER)%
+    database_password: %env(MYSQL_PASSWORD)%
+
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
