Use Gedmo\Uploadable for files in Post and Block

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -99,4 +99,6 @@ knp_paginator:
 stof_doctrine_extensions:
     orm:
         default:
-            sluggable:   true
+            sluggable: true
+            uploadable: true
+            timestampable: true
